# fast-package-manager

./: .gitignore  Cargo.toml  LICENSE  README.md
examples/playground/: index.js  package.json
src/: Untitled-1.json  dependency_resolver.rs  downloader.rs  extract_npm_tgz.rs  hardlink.rs  http.rs  install_manifest.rs  install_package.rs  lib.rs  main.rs  network_adapter.rs  npm.rs  npm_fs.rs  npm_network_adapter.rs  npm_tar_extractor.rs  old.rs  package_fetcher.rs  package_manifest.rs  response_writer.rs  symlink.rs  version_range_resolver.rs
src/old/: package_fetcher.rs
