[package]
name = "fast-package-manager"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
flate2 = "1.0.25"
futures = "0.3.25"
futures-util = "0.3.25"
reqwest = { version = "0.11.14", features = ["json", "stream"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
tar = "0.4.38"
tempfile = "3.3.0"
tokio = { version = "1.25.0", features = ["full"] }
