[package]
name = "fast-package-manager"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-recursion = "1.0.2"
async-trait = "0.1.64"
derive_more = "0.99.17"
flate2 = "1.0.25"
futures = "0.3.25"
futures-util = "0.3.25"
mockall = "0.11.3"
reqwest = { version = "0.11.14", features = ["json", "stream"] }
semver = "1.0.16"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = { version = "1.0.91", features = ["preserve_order"] }
tar = "0.4.38"
tempfile = "3.3.0"
tokio = { version = "1.25.0", features = ["full"] }
